src/core/generator/snapshots/tailcall__core__generator__config__tests__from_json.snap
---
source: src/core/generator/config.rs
expression: "&config"
---
GeneratorConfig {
    input: [
        Input {
            source: Config {
                src: "https://tailcall.run/configs/abc.json",
                resolved_src: None,
            },
        },
        Input {
            source: Config {
                src: "./jsonplaceholder.graphql",
                resolved_src: None,
            },
        },
        Input {
            source: Import {
                src: "https://jsonplaceholder.typicode.com/posts",
                resolved_src: None,
            },
        },
    ],
    output: Output {
        format: Json,
        file: "./output.json",
    },
    generate: GenerateOptions {
        schema: Schema {
            query: "Query",
            mutation: "Mutation",
        },
    },
    transform: Transform {
        ambiguous_name_resolver: Some(
            Object {
                "inputPrefix": String("IN"),
                "outputPrefix": String("OUT"),
                "inputPostFix": String("IN"),
                "outputPostFix": String("OUT"),
            },
        ),
        merge_types: Some(
            Object {
                "threshold": Number(0.9),
            },
        ),
        js: Some(
            Object {
                "source": String("transformer.js"),
                "functionName": String("transform"),
            },
        ),
    },
}
