src/core/generator/snapshots/tailcall__core__generator__config__tests__resolve_paths.snap
---
source: src/core/generator/config.rs
expression: "&config"
---
GeneratorConfig {
    input: [
        Input {
            source: Config {
                src: "https://tailcall.run/configs/abc.json",
            },
        },
        Input {
            source: Config {
                src: "../../../tailcall-fixtures/fixtures/generator/jsonplaceholder.graphql",
            },
        },
        Input {
            source: Import {
                src: "https://jsonplaceholder.typicode.com/posts",
            },
        },
    ],
    output: Output {
        format: Json,
        file: "../../../tailcall-fixtures/fixtures/generator/output.json",
    },
    generate: GenerateOptions {
        schema: Schema {
            query: "Query",
            mutation: "Mutation",
        },
    },
    transform: Transform {
        ambiguous_name_resolver: Some(
            Object {
                "inputPrefix": String("IN"),
                "outputPrefix": String("OUT"),
                "inputPostFix": String("IN"),
                "outputPostFix": String("OUT"),
            },
        ),
        merge_types: Some(
            Object {
                "threshold": Number(0.9),
            },
        ),
        js: Some(
            Object {
                "source": String("transformer.js"),
                "functionName": String("transform"),
            },
        ),
    },
}
